# Accelerator_Pedal_Position_Sensor

./: .clang-format  .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  README.md  build_main.bat  template.c
.circleci/: config.yml
mock/: CMakeLists.txt
mock/ECU/: CMakeLists.txt  ecu_mock.c  ecu_mock.h
mock/SENSORS/: CMakeLists.txt  sensor_backup_mock.c  sensor_main_mock.c  sensor_mock.h
mock/Sensors/: CMakeLists.txt  sensor_backup_mock.c  sensor_main_mock.c  sensor_mock.h
mock/TIMER/: CMakeLists.txt  timer_mock.c  timer_mock.h
mock/Timer/: CMakeLists.txt
src/: CMakeLists.txt  app_main.c  apps_conf.h  apps_main.c  aps_main.c  aps_main.h  test.c
src/IADConverter/: CMakeLists.txt  iaps_adconverter.c  iaps_adconverter.h
src/IAPSCommon/: CMakeLists.txt  iaps_common.c  iaps_common.h
src/IAPSCore/: CMakeLists.txt  iaps_core.c  iaps_core.h
src/ICommon/: CMakeLists.txt  app_common.c  app_common.h  apps_common.c  apps_common.h  iaps_common.c  iaps_common.h
src/IConverter/: CMakeLists.txt  app_converter.c  app_converter.h  apps_converter.c  apps_converter.h
src/ISCP/: CMakeLists.txt  app_scp.c  apps_scp.c  apps_scp.h
src/ITimer/: CMakeLists.txt  iaps_timer.c  iaps_timer.h
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/IADConverter/: CMakeLists.txt  ut_adc_29_getsensorvalue.c  ut_adc_30_crosschecksensorvalues.c  ut_adconverter_smoketest.c
test/unit/IAPSCore/: CMakeLists.txt  ut_apscore_smoketest.c
test/unit/ICommon/: CMakeLists.txt  ut_common_smoketest.c
test/unit/IConverter/: CMakeLists.txt  ut_converter_smoketest.c
test/unit/ISCP/: CMakeLists.txt  ut_scp_smoketest.c
test/unit/ITimer/: CMakeLists.txt  ut_timer_smoketest.c
